[IMP] website: update some navbar design / fix issues
- There were border aboves the text elements and the social media
  icons in the header templates for mobile, hamburger and sidebar views.
  They were not present for all alignments and were not judged
  necessary. These top borders were removed.

- The animation for the Mega Menu appearance for mobile, hamburger and
  sidebar views is now from left to right when the navbar is located on
  the left of the screen.

- The padding of the rounded box template was increased. Before, using
  the Link Style "Block" without the logo would make extends beyond the
  header.

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1827,6 +1827,9 @@ header {
             transform: translateX(5%);
         }
     }
+    .o_mega_menu_left .o_mega_menu section {
+        transform: translateX(-5%);
+    }
 
     .o_mega_menu.show, .o_mega_menu.show ~ .o_mega_nav {
         @include transition(opacity $offcanvas-transition-duration ease-in-out, visibility $offcanvas-transition-duration ease-in-out);
