--- a/addons/crm/views/crm_lead_views.xml
+++ b/addons/crm/views/crm_lead_views.xml
@@ -880,6 +880,7 @@
                     <field name="recurring_revenue_monthly_prorated" groups="!crm.group_use_recurring_revenues" invisible="1"/>
                     <field name="recurring_revenue" groups="!crm.group_use_recurring_revenues" invisible="1"/>
                     <field name="recurring_revenue_prorated" groups="!crm.group_use_recurring_revenues" invisible="1"/>
+                    <field name="stage_id_color" invisible="1"/>
                 </graph>
             </field>
         </record>
@@ -902,6 +903,7 @@
                     <field name="recurring_revenue_monthly_prorated" groups="!crm.group_use_recurring_revenues" invisible="1"/>
                     <field name="recurring_revenue" groups="!crm.group_use_recurring_revenues" invisible="1"/>
                     <field name="recurring_revenue_prorated" groups="!crm.group_use_recurring_revenues" invisible="1"/>
+                    <field name="stage_id_color" invisible="1"/>
                 </graph>
             </field>
         </record>
@@ -915,6 +917,7 @@
                     <field name="stage_id" type="col"/>
                     <field name="expected_revenue" type="measure"/>
                     <field name="color" invisible="1"/>
+                    <field name="stage_id_color" invisible="1"/>
                     <field name="automated_probability" invisible="1"/>
                     <field name="message_bounce" invisible="1"/>
                     <field name="probability" invisible="1"/>
@@ -945,6 +948,7 @@
                     <field name="recurring_revenue_monthly_prorated" groups="!crm.group_use_recurring_revenues" invisible="1"/>
                     <field name="recurring_revenue" groups="!crm.group_use_recurring_revenues" invisible="1"/>
                     <field name="recurring_revenue_prorated" groups="!crm.group_use_recurring_revenues" invisible="1"/>
+                    <field name="stage_id_color" invisible="1"/>
                 </pivot>
             </field>
         </record>
