[FIX] payroll: fix working schedule upper part
hiding the title Duration Based when choosing flexible schedule type instead of hiding only its checkbox.

task-5064889

--- a/addons/resource/views/resource_calendar_views.xml
+++ b/addons/resource/views/resource_calendar_views.xml
@@ -53,7 +53,7 @@
                     <group name="resource_details" col="2">
                         <group name="resource_working_hours">
                             <field name="schedule_type" widget="radio"/>
-                            <label for="switch_based_on_duration" string="Duration Based" class="o_form_label"/>
+                            <label for="switch_based_on_duration" string="Duration Based" class="o_form_label" invisible="flexible_hours"/>
                             <button name="switch_based_on_duration" invisible="duration_based or flexible_hours" type="object"
                                 icon="fa-square-o" title="Switch to Duration based attendance" class="btn p-0"
                                 confirm="Are you sure you want to switch to a Duration based attendance?"
