--- a/addons/hr/views/hr_department_views.xml
+++ b/addons/hr/views/hr_department_views.xml
@@ -9,7 +9,7 @@
                     <field name="company_id" invisible="1"/>
                     <sheet>
                         <div class="oe_button_box" name="button_box">
-                            <button class="oe_stat_button" type="action" name="%(hr.act_employee_from_department)d" icon="fa-users">
+                            <button class="oe_stat_button" type="object" name="action_employee_from_department" icon="fa-users">
                                 <field string="Employees" name="total_employee" widget="statinfo"/>
                             </button>
                             <button class="oe_stat_button" type="object" name="action_plan_from_department" icon="fa-list-ul">
