[IMP] im_livechat: enhance agent overview on livechat channel
- with this commit, existing kanban view of Agent in livechat channel form view
  will be replaced by a list view for desktop users.
- new list view includes Agent, Languages, Expertise, and Ongoing Sessions.
- also fa-phone icon will be visible when agent is in a call.
- kanban view is still kept for mobile users and will have same fields as list
  view.
- displayed ongoing_session_count and remaining_session_capacity below agent
  list.
- remaining_session_capacity is only visible when max_sessions_mode is set to
  limited.

  task-4772546

closes odoo/odoo#214700

Signed-off-by: Sébastien Theys (seb) <seb@odoo.com>

--- a/addons/im_livechat/views/im_livechat_channel_views.xml
+++ b/addons/im_livechat/views/im_livechat_channel_views.xml
@@ -93,8 +93,20 @@
                         </div>
                         <notebook>
                             <page string="Operators" name="operators">
-                                    <field name="user_ids" nolabel="1" colspan="2" domain="[['all_group_ids', 'in', %(im_livechat.im_livechat_group_user)d]]">
-                                        <kanban>
+                                    <field name="user_ids"
+                                           nolabel="1"
+                                           colspan="2"
+                                           domain="[['all_group_ids', 'in', %(im_livechat.im_livechat_group_user)d]]"
+                                           mode="list,kanban"
+                                           context="{'add_livechat_channel_ctx': True}">
+                                        <list no_open="1">
+                                            <field name="partner_id" string="Agent" widget="many2one_avatar_user" width="175px" context="{'im_livechat.hide_partner_company': True}"/>
+                                            <field name="livechat_is_in_call" widget="boolean_phone" nolabel="1"/>
+                                            <field string="Languages" name="livechat_lang_ids" widget="many2many_tags" optional="show"/>
+                                            <field string="Expertise" name="livechat_expertise_ids" widget="many2many_tags" optional="show"/>
+                                            <field string="Ongoing Sessions" name="livechat_ongoing_session_count" width="150px" optional="show"/>
+                                        </list>
+                                        <kanban class="o_kanban_mobile" can_open="False">
                                             <templates>
                                                 <t t-name="card" class="flex-row">
                                                     <aside>
@@ -107,15 +119,38 @@
                                                                 <i title="Remove operator" class="fa fa-fw fa-lg fa-close"/>
                                                             </a>
                                                         </div>
-                                                        <field name="livechat_username" string="Online Chat Name"/>
+                                                        <field t-if="record.livechat_lang_ids.raw_value.length > 0" name="livechat_lang_ids" widget="many2many_tags"/>
+                                                        <field t-if="record.livechat_expertise_ids.raw_value.length > 0" name="livechat_expertise_ids" widget="many2many_tags"/>
+                                                        <div class="d-flex justify-content-between align-items-baseline">
+                                                            <div class="column">
+                                                                <span>Ongoing Sessions:</span><field name="livechat_ongoing_session_count" class="ms-1"/>
+                                                            </div>
+                                                            <field name="livechat_is_in_call" class="me-1" widget="boolean_phone"/>
+                                                        </div>
                                                     </main>
                                                 </t>
                                             </templates>
                                         </kanban>
                                     </field>
-                                    <p class="text-muted" colspan="2">
-                                        Operators that do not show any activity In Odoo for more than 30 minutes will be considered as disconnected.
-                                    </p>
+                                    <group>
+                                        <group class="order-1 order-lg-0">
+                                            <p class="text-muted" colspan="2">
+                                                Operators that do not show any activity In Odoo for more than 30 minutes will be considered as disconnected.
+                                            </p>
+                                        </group>
+                                        <group class="oe_subtotal_footer d-flex justify-content-end">
+                                            <div class="container">
+                                                <div class="row mb-2">
+                                                    <div class="col"><label class="fw-bold" for="ongoing_session_count"/></div>
+                                                    <div class="col me-1"><field name="ongoing_session_count" nolabel="1"/></div>
+                                                </div>
+                                                <div class="row mb-2" invisible="max_sessions_mode!='limited'">
+                                                    <div class="col"><label class="fw-bold" for="remaining_session_capacity"/></div>
+                                                    <div class="col me-1"><field name="remaining_session_capacity" nolabel="1"/></div>
+                                                </div>
+                                            </div>
+                                        </group>
+                                    </group>
                             </page>
                             <page string="Options" name="options" groups="im_livechat.im_livechat_group_manager">
                                 <group>
