[FIX] mail: mobile chat bubble click should not move bubble
Before this commit, when clicking on chat bubble in mobile, the chat
bubbles were moving down temporarily

This happens because in some contexts, the chat hub bubbles are lift
up, like in discuss app and at bottom of website page. This was done
with a `transform: translateY()` but when the button was being
clicked the chat bubble temporarily resets its unlifted position, as
if no `transform: translateY()` was in effect.

This commit fixes the issue by using `bottom` CSS style rule. Chat
hub bubbles part has a bottom value, the lift up is now designed to
combine with the static bottom value, thus bubbles part stay at the
desired position even when being clicked.

Task-5068836

--- a/addons/mail/static/src/core/common/chat_hub.scss
+++ b/addons/mail/static/src/core/common/chat_hub.scss
@@ -1,17 +1,18 @@
 .o-mail-ChatHub-bubbles {
     width: $o-mail-ChatHub-bubblesWidth;
     z-index: $o-mail-NavigableList-zIndex - 1;
+    bottom: calc(#{var(--mail-ChatHub-bubbles-bottom, 0)} + #{var(--mail-ChatHub-bubbles-bottomLift, 0)});
 
     &.o-liftUp {
-        transform: translateY(-25px);
+        --mail-ChatHub-bubbles-bottomLift: 25px;
     }
 
     &.o-mobile {
         margin-right: $o-mail-ChatHub-bubblesMargin + 5px;
-        transform: translateY(-35px);
+        --mail-ChatHub-bubbles-bottomLift: 35px;
 
         body:has(.o-mail-Discuss):not(:has(.o-mail-ChatWindow)) &, body:has(.o-mail-MessagingMenu):not(:has(.o-mail-ChatWindow)) &  {
-            transform: translateY(-65px);
+            --mail-ChatHub-bubbles-bottomLift: 65px;
             z-index: $zindex-modal + 5;
         }
     }
