[FIX] website_sale_*: minor CSS fixes
*: wishlist, stock_wishlist

This commit fine-tunes minor CSS issues related to the
`website_sale_wishlist` redesign.

1) Prevented the out of stock badge from growing inside flex layouts

2) Scoped grid mode CSS rules to list view

3) Fixed minor guidelines issues (missing empty space, `px` units, ...)

task-5070263

--- a/addons/website_sale_stock_wishlist/views/website_sale_stock_wishlist_templates.xml
+++ b/addons/website_sale_stock_wishlist/views/website_sale_stock_wishlist_templates.xml
@@ -5,7 +5,7 @@
             <t t-set="product_extra_information">
                 <span
                     t-if="wish.product_id._is_sold_out() and not wish.product_id.allow_out_of_stock_order"
-                    class="o_wsale_stock_badge badge text-bg-danger align-top" 
+                    class="o_wsale_stock_badge badge text-bg-danger align-self-start align-top"
                 >
                     <i class="fa fa-circle text-danger me-1" aria-hidden="true"/>
                     Out of stock
