[FIX] account: preserve background color for (sub)sections on focus
When selecting a section in the widget, its background incorrectly changes to
the default table color instead of keeping the (sub)section's given color.

Affected version- 19.0
task-5009037

--- a/addons/account/static/src/components/section_and_note_fields_backend/section_and_note_backend.scss
+++ b/addons/account/static/src/components/section_and_note_fields_backend/section_and_note_backend.scss
@@ -27,6 +27,11 @@ table.o_section_and_note_list_view tr.o_data_row {
                 cursor: pointer;
             }
         }
+        &.o_selected_row {
+            th:focus-within, td:focus-within {
+                background-color: var(--table-bg);
+            }
+        }
     }
     &.o_is_line_note,
     &.o_is_line_section,
