[IMP] sale: display totals for combo product lines in backend and reports
Before this commit:
- Combo products had no totals in the backend, since their price was set to 0 by
  design.
- Prices were visible in eCommerce but not in the backend.

After this commit:
- Combo products now display totals and subtotals in the backend, computed in JS
  without altering the existing backend design.
- Combo totals are also visible in the portal and reports.

Affected version-19.0
task-5009037

--- a/addons/sale/views/sale_order_views.xml
+++ b/addons/sale/views/sale_order_views.xml
@@ -622,7 +622,7 @@
                                 <field name="currency_id" column_invisible="True"/>
 
                                 <!-- Standard fields -->
-                                <field name="sequence" widget="handle"/>
+                                <field name="sequence" invisible="combo_item_id" widget="handle"/>
                                 <field
                                     name="product_id"
                                     string="Product Variant"
