--- a/addons/sale/report/ir_actions_report_templates.xml
+++ b/addons/sale/report/ir_actions_report_templates.xml
@@ -183,10 +183,20 @@
                             <tr t-elif="is_combo" name="tr_combo" class="fw-bold o_line_subsection">
                                 <td
                                     name="td_combo_name"
-                                    colspan="99"
+                                    t-att-colspan="3 + (1 if display_discount else 0) + (1 if display_taxes else 0)"
                                     t-att-class="padding_class"
                                 >
                                     <span t-field="line.name">Combo Product</span>
+                                </td>
+                                <td name="td_combo_price" class="text-end o_price_total">
+                                    <span
+                                        name="price_subtotal_combo"
+                                        t-out="line._get_combo_totals(price_field)"
+                                        class="text-nowrap"
+                                        t-options="{'widget': 'monetary', 'display_currency': doc.currency_id}"
+                                    >
+                                        27.00
+                                    </span>
                                 </td>
                             </tr>
                             <tr t-else="" name="tr_product">
