[FIX] mail: use inlineBody instead of richBody in message reply
Before this PR, message that contains <br> would not be properly inlined. The
second line would be directly append to the first without space.
This PR use the existing inlineBody to fix the issue and cleanup the css that
inlined the message before.

task-5072071

--- a/addons/mail/static/src/core/common/message_in_reply.scss
+++ b/addons/mail/static/src/core/common/message_in_reply.scss
@@ -23,13 +23,7 @@
 
 .o-mail-MessageInReply-message {
     // Make the body single line when possible
-    p, div {
-        display: inline;
+    p {
         margin: 0;
     }
-
-    br {
-        display: none;
-    }
 }
-
