--- a/addons/purchase_stock/static/src/product_catalog/record/kanban_record.scss
+++ b/addons/purchase_stock/static/src/product_catalog/record/kanban_record.scss
@@ -4,6 +4,6 @@
     border-color: $o-component-active-border;
 }
 
-.o_purchase_product_kanban_catalog_view .o_kanban_record.o_hide_suggest_qty [name="o_kanban_purchase_suggest"] {
+.o_purchase_product_kanban_catalog_view .o_kanban_record.o_hide_suggest_qty [name="kanban_purchase_suggest"] {
   display: none !important;
 }
