[IMP] mass_mailing: revamp mailing subscription page
Purpose
=======

Make the opt-out page easier to customize as well as easier to use.
Modernize / clean the design of the page as well.

MAIN CHANGES
============

1. Redesign, regroup information into a few blocks:

A clear alert on unsubscribing, displayed when landing on the page

Feedback form (showed when adding the email to blacklist)
- Will appear at the top of the page
- Will disappear on submission, replaced by a confirmation msg
- Only when unsubscribing from document or mailing, not when opting
on or out mailing lists from the list block. Will appear if using
the 'I don't want emails' button though.

A single block displaying all public mailing lists
- Will contain
    -first the lists the mailing contact is opt in
    - Then the ones it is opt out
    - Then the other public ones
- Will now have simple checkbox and large clickable area
- Will now have a description displayed below the list name

A simple message + alert when on blocklist
- Will replace the mailing list form.

Buttons Update Preferences, Unblock me, I don't want emails
- Will dynamically be displayed or hidden
- Always below the displayed block in (list display, blocklist msg)
- Note that the default value for the OPTION displaying
the "I don't want emails" button is now False

Information message
- Updated on action, dispalayed below buttons.

Social media block (with website)
- At the end of the page

A placeholder if no public list exists

2. A new description field on mailing lists

Add a description field on the mailing.list model, that can be used
to hint its content when on the subscription page. It should be
editable from the form view, and from the website editor as well.

3. Make the page editable and customizable

Before, the edition of the page lead to an empty page, very hard to
read and customize.

The page is now easy to customize (a few in-between editable blocks
have been added) and content will be displayed on edition s

--- a/addons/mass_mailing/static/src/scss/mailing_portal.scss
+++ b/addons/mass_mailing/static/src/scss/mailing_portal.scss
@@ -1,16 +1,30 @@
 .o_mailing_portal_body {
     // Taken from webclient.scss to copy backend styling
-    // Uppercase primary and secondary except when secondary is used as a dropdown
-    // toggler.
-    .btn-primary,
-    .btn-secondary:not(.dropdown-toggle):not(.dropdown-item),
-    .btn-secondary.o_arrow_button:not(.dropdown-item) {
-      text-transform: uppercase;
+    .o_mailing_subscription_form_list_toggle {
+        > span:last-of-type {
+            color: $green-700;
+        }
+        &:hover {
+            opacity: 1;
+            cursor: pointer;
+        }
+    }
+    .o_mailing_subscription_form_list_description {
+        margin-left: 54px;
+        overflow: hidden;
+    }
+    li {
+        border-radius: 0.5em;
     }
 
-    .o_mailing_list_unsubscribed {
-        margin-left: 20px;
-        color: #005326;
-        font-size: 90%;
+    &.editor_enable {
+        .o_mailing_portal_alert, #o_mailing_subscription_feedback_info, #o_mailing_subscription_feedback,
+        #o_mailing_subscription_form_manage, #o_mailing_subscription_form_blocklisted,
+        #button_subscription_update_preferences {
+            display: block !important;
+        }
+        .o_mailing_subscription_form_list_description {
+            margin-bottom: 16px;
+        }
     }
 }
