--- a/addons/sale/views/sale_portal_templates.xml
+++ b/addons/sale/views/sale_portal_templates.xml
@@ -770,7 +770,7 @@
                                     <tr
                                         t-if="is_section or is_subsection"
                                         name="tr_section"
-                                        t-att-class="'fw-bolder o_line_section' if is_section else 'fw-bold o_line_subsection'"
+                                        t-attf-class="border-dark {{'fw-bold o_line_section bg-200' if is_section else 'fw-medium o_line_subsection bg-100'}}"
                                     >
                                         <t t-set="show_section_total" t-value="is_section or not line.parent_id.collapse_prices"/>
                                         <t
@@ -809,7 +809,7 @@
                                             <span t-field="line.name"/>
                                         </td>
                                     </tr>
-                                    <tr t-elif="is_combo" name="tr_combo" class="fw-bold o_line_subsection">
+                                    <tr t-elif="is_combo" name="tr_combo" class="fw-bold o_line_subsection bg-100 border-dark">
                                         <td
                                             name="td_combo_name"
                                             t-att-class="padding_class"
