[FIX] l10n_cl: fix error when submitting invoiced PoS orders
Steps to reproduce:
 -> Install l10n_cl_edi_pos
 -> Create a PoS order and enable the invoice option.
 -> When clicking on the validate button, the following traceback appears
 ->  'Error while rendering the template'

Cause:
 -> In the below commit, we removed the 'current_total' section.
 -> Commit:- https://tinyurl.com/ms5nf2m4

Solution:
 -> Correct the XPath according to the new commit

closes odoo/odoo#228227

X-original-commit: e8d35677c096c04b9a7465821f958dccf291150d
Signed-off-by: William André (wan) <wan@odoo.com>
Signed-off-by: Deep I Joshi (dijo) <dijo@odoo.com>

--- a/addons/l10n_cl/views/report_invoice.xml
+++ b/addons/l10n_cl/views/report_invoice.xml
@@ -148,9 +148,9 @@
 
         <xpath expr="//t[@t-set='layout_document_title']" position="replace"/>
 
-        <t t-set="section_subtotal" t-value="line.get_section_subtotal()" position="before">
+        <xpath expr="//t[@t-foreach='lines_to_report']/t" position="before">
             <t t-set="line_amounts" t-value="line._l10n_cl_get_line_amounts()"/>
-        </t>
+        </xpath>
 
         <xpath expr="//span[@t-field='line.price_unit']" position="before">
             <t t-if="'second_currency' in line_amounts" t-set="line_second_currency_round" t-value="line_amounts['second_currency']['round_currency']"/>
