[FIX] website_sale: product template packaging preview
Packaging options was only viewable if a product had variants.
Modify condition to view product packaging when it has multiple uoms.

opw-5104189

closes odoo/odoo#228228

X-original-commit: ef14e1e58737ec19b31856a78d748aea6e945d76
Signed-off-by: Valentin Chevalier <vcr@odoo.com>
Signed-off-by: Lina Eweis (liew) <liew@odoo.com>

--- a/addons/website_sale/views/templates/templates.xml
+++ b/addons/website_sale/views/templates/templates.xml
@@ -2129,7 +2129,7 @@
                                             t-att-value="product.type"
                                         />
                                         <div
-                                            t-attf-class="o_wsale_product_details_content_section o_wsale_product_details_content_section_attributes mb-4 {{not product.valid_product_template_attribute_line_ids and 'd-none' or ' '}}"
+                                            t-attf-class="o_wsale_product_details_content_section o_wsale_product_details_content_section_attributes mb-4 {{not (product.valid_product_template_attribute_line_ids or product._has_multiple_uoms()) and 'd-none' or ''}}"
                                         >
                                             <t t-call="website_sale.variants">
                                                 <t t-set="ul_class" t-valuef="flex-column" />
