[FIX] web,project: use a new hook to update the embedded user settings
Only update the embedded settings when a project is duplicated manually by the user.
We remove the logic of fetching the settings when creating the component as it is error-prone,
too complex and potentially too costly in terms of RPCs.
So we introduce a new hook onRecordDuplicated, which is called when a record is duplicated
by the user so that it updates the embedded settings accordingly in the user settings (browser side).

--- a/addons/project/views/project_project_views.xml
+++ b/addons/project/views/project_project_views.xml
@@ -404,7 +404,7 @@
 
                                         <a t-if="['portal', 'invited_users'].includes(record.privacy_visibility.raw_value) and !record.is_template.raw_value" class="dropdown-item" role="menuitem" name="action_open_share_project_wizard" type="object">Share Project</a>
 
-                                        <a class="dropdown-item" role="menuitem" name="copy" type="object">Duplicate</a>
+                                        <a class="dropdown-item" role="menuitem" name="action_copy_project_with_refresh" type="object">Duplicate</a>
                                         <a class="dropdown-item" role="menuitem" type="open">Settings</a>
                                     </div>
                                     <div class="col-12 ps-0" groups="!project.group_project_manager">
