[FIX] hr,*_work_entry: prevent traceback when Working Hours is empty
Steps to Reproduce:
1. Go to Employees.
2. Select an employee with Work Entry Source = "Working Schedule".
3. Clear the "Working Hours" field.
4. Try to save.

Issues Fixed:
Traceback when saving an employee with Work Entry Source = "Working Schedule" and no Working Hours
set. This is due to the unnecessary triggering of work entry recomputation.

Fix:
Skip work entry recomputation when the calendar is empty by guarding the computation methods.
This preserves existing work entries when the calendar is emptied and prevents regeneration based on an empty schedule.
If "Regenerate Work Entries" is clicked with an empty calendar, the employee now correctly shows a blank calendar page.

task-5068798

--- a/addons/hr/views/hr_employee_views.xml
+++ b/addons/hr/views/hr_employee_views.xml
@@ -286,7 +286,7 @@
                                         </div>
 
                                         <separator name="schedule" string="Schedule"/>
-                                        <field name="resource_calendar_id" help="The default working hours are set in configuration."/>
+                                        <field name="resource_calendar_id" help="The default working hours are set in configuration." placeholder="e.g. Half-Time, 40h/week, Flexible 20h, ..."/>
                                         <field name="tz" required="id"/>
                                     </group>
                                 </group>
