--- a/addons/hr_work_entry/views/hr_contract_template_views.xml
+++ b/addons/hr_work_entry/views/hr_contract_template_views.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="hr.hr_contract_template_form_view"/>
         <field name="arch" type="xml">
             <div name="wage" position="after">
-                <field name="work_entry_source" invisible="1"/>
+                <field name="work_entry_source" widget="work_entry_source_field" invisible="1"/>
             </div>
         </field>
     </record>
