--- a/addons/hr_work_entry/views/hr_employee_views.xml
+++ b/addons/hr_work_entry/views/hr_employee_views.xml
@@ -18,7 +18,7 @@
                 </button>
             </button>
             <separator name="schedule" position="before">
-                <field name="work_entry_source" invisible="1"/>
+                <field name="work_entry_source" widget="work_entry_source_field" invisible="1"/>
             </separator>
         </field>
     </record>
