--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -32,7 +32,7 @@
     }
 
     .o-mail-Composer-mainActions {
-        margin-top: map-get($spacers, 1);
+        margin-top: map-get($spacers, 1) * 5 / 4;
     }
 
     &.o-chatWindow .o-mail-Composer-mainActions {
