[FIX] website_sale: use aspect ratio config in product page image viewer
Steps
-----
1. Open a product page in eCommerce;
2. open the editor;
3. change the auto-crop setting to a non-default value;
4. enable zoom-on-click;
5. save & click to zoom.

Issue
-----
The thumbnails use a square aspect ratio.

Cause
-----
Their aspect ratio is hardcoded to be '1/1'.

Solution
--------

1. When instantiating the `ProductImageViewer` dialog, get the aspect
   ratio used by `.oe_website_sale`, and propagate it into a class name.
2. Use the CSS rules introduced by 670b1daa2254d to apply the correct
   aspect ratio based on the class name.

opw-4908881

closes odoo/odoo#229216

Signed-off-by: Valentin Chevalier <vcr@odoo.com>

--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -1976,6 +1976,7 @@
                             o_wsale_product_page_opt_image_ratio_mobile_{{website.product_page_image_ratio_mobile}}
                             o_wsale_product_page_opt_image_radius_{{website.product_page_image_roundness}}
                          "
+                         t-att-data-image-ratio="website.product_page_image_ratio"
                          t-att-data-view-track="view_track and '1' or '0'"
                 >
                     <div class="o_wsale_content_contained container d-flex flex-wrap align-items-center py-3">
